--- a/src/components/PlanComparision/features.scss
+++ b/src/components/PlanComparision/features.scss
@@ -34,6 +34,7 @@
         flex-direction: row;
         height: 100%;
         padding: 0 32px;
+        flex-wrap: wrap;
 
         .summary {
             display: flex;
@@ -85,8 +86,21 @@
 
 @media screen and (max-width:640px) {
     .features_section {
+        .feature_container {
+
+            .sub_heading,
+            .caption {
+                text-align: center;
+                margin-bottom: 0px;
+            }
+        }
+
         .plan_comparision {
             padding: 0 0;
+
+            .summary {
+                justify-content: flex-end;
+            }
         }
     }
 }
