--- a/src/components/Stats/stats_section.scss
+++ b/src/components/Stats/stats_section.scss
@@ -46,6 +46,14 @@
         .stats_container {
             align-items: center;
 
+            .title {
+                text-align: center;
+            }
+
+            .subtitle {
+                text-align: center;
+            }
+
             .score_results {
                 flex-wrap: wrap;
 
