--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -16,6 +16,7 @@
             margin-top: 8px;
             margin-bottom: 16px;
             max-width: fit-content;
+            text-align: center;
         }
     }
 
@@ -41,8 +42,18 @@
         object-fit: cover;
 
         .main_section {
+            display: flex;
+            max-width: 100vw;
             height: auto;
-            width: auto;
+            min-height: fit-content;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: nowrap;
+
+            .title {
+                margin-top: 12px;
+            }
         }
     }
 }
