--- a/src/components/SliderSection/slider.scss
+++ b/src/components/SliderSection/slider.scss
@@ -13,12 +13,14 @@
         justify-content: center;
         min-width: 640px;
         width: 640px;
+        max-width: 80vw;
     }
 
     .image_container {
         position: relative;
         height: 336px;
         width: 600px;
+        max-width: 100vw;
 
         .writing_img {
             left: 48px;
@@ -61,6 +63,7 @@
             .line {
                 height: 2px;
                 width: 100%;
+                max-width: 80vw;
                 border-radius: 1px;
                 background-color: $progress-bar-grey;
                 margin-top: 16px;
@@ -120,12 +123,32 @@
 }
 
 @media screen and (max-width:640px) {
-    img {
-        max-width: 100%;
-    }
     .slider_section {
         margin-top: 24px;
         flex-wrap: wrap;
+        height: 10%;
+
+        .animation_container {
+            min-width: 80vh;
+            width: 80vh;
+        }
+
+        .image_container {
+            max-width: 80vw;
+            height: auto;
+            margin: 0 auto;
+
+            .writing_img {
+                left: 18px;
+            }
+
+            .suggestion_img {
+                left: 18px;
+            }
+        }
+        ul {
+            max-width: 80vw;
+        }
     }
 
 }
