--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,11 +10,11 @@ body {
 @media screen and (max-width:640px) {
     body {
         position: absolute;
+        margin: 0;
     }
 
     img {
         max-width: 100%;
+        height: auto;
     }
-
 }
-
